--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Popular Movies</string>
+
+    <string name="sort_by_most_popular">Most Popular</string>
+    <string name="sort_by_top_rated">Top Rated</string>
 </resources>
