--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,8 @@
 
     <string name="sort_by_most_popular">Most Popular</string>
     <string name="sort_by_top_rated">Top Rated</string>
+
+    <string name="release_date">Release Date</string>
+
+    <string name="rating">Rating</string>
 </resources>
