--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,12 @@
     <string name="sort_by_top_rated">Top Rated</string>
 
     <string name="release_date">Release Date</string>
-
     <string name="rating">Rating</string>
+    <string name="action_setting">Setting</string>
+    
+    <string name="sort_order">sortOrder</string>
+    <string name="sort_by">Sort By</string>
+
+    <string name="pref_sort_most_popular">mostPopular</string>
+    <string name="pref_sort_top_rated">topRated</string>
 </resources>
