--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,7 @@
 
     <string name="trailers">Trailers:</string>
     <string name="reviews">Reviews:</string>
+
+    <string name="no_trailers">Sorry no trailer is available at this moment</string>
+    <string name="no_reviews">Sorry no review is available at this moment</string>
 </resources>
