--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
 
     <string name="sort_by_most_popular">Most Popular</string>
     <string name="sort_by_top_rated">Top Rated</string>
+    <string name="sort_by_favourite">Favourite</string>
 
     <string name="release_date">Release Date</string>
     <string name="rating">Rating</string>
@@ -11,12 +12,16 @@
     <string name="sort_order">sortOrder</string>
     <string name="sort_by">Sort By</string>
 
-    <string name="pref_sort_most_popular">popular?</string>
-    <string name="pref_sort_top_rated">top_rated?</string>
+    <string name="pref_sort_most_popular" translatable="false">popular?</string>
+    <string name="pref_sort_top_rated" translatable="false">top_rated?</string>
+    <string name="pref_sort_favourite" translatable="false">favourite</string>
 
     <string name="trailers">Trailers:</string>
     <string name="reviews">Reviews:</string>
 
     <string name="no_trailers">Sorry no trailer is available at this moment</string>
     <string name="no_reviews">Sorry no review is available at this moment</string>
+    <string name="no_internet_message">Please turn on an active internet connection</string>
+    <string name="removed_from_favourite">"Movie removed from favourite"</string>
+    <string name="added_to_favourite">Movie added to favourite</string>
 </resources>
