--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,5 @@
     <string name="no_internet_message">Please turn on an active internet connection</string>
     <string name="removed_from_favourite">"Movie removed from favourite"</string>
     <string name="added_to_favourite">Movie added to favourite</string>
+    <string name="press_back_again_to_exit">Press back again to exit</string>
 </resources>
